--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,7 @@
     "husky": ">=6",
     "lint-staged": ">=10",
     "nodemon": "^2.0.4",
-    "prettier": "^2.3.2"
+    "prettier": "^2.6.2"
   },
   "dependencies": {
     "axios": "^0.26.1",
