--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "arrowParens": "always",
   "jsxSingleQuote": true,
   "printWidth": 100,
-  "quoteProps": "preserve"
+  "quoteProps": "preserve",
+  "bracketSpacing": false
 }
