--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,15 +4,22 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+
+    strategy:
+      env:
+        NODE_VERSION: [14.x, 16.x]
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+
       - name: Setup Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ env.NODE_VERSION }}
-      - name: npm install, build, and test (unit and e2e)
+
+      - name: install, build, and test (unit and e2e)
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm build --if-present
+          npm test --if-present
