--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,17 +6,17 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      env:
-        NODE_VERSION: [14.x, 16.x]
+      matrix:
+        node-version: [14.x, 16.x]
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Setup Node.js ${{ env.NODE_VERSION }}
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ matrix.node-version }}
 
       - name: install, build, and test (unit and e2e)
         run: |
