--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [16.x, 20.x]
 
     steps:
       - name: Check out repository
@@ -20,6 +20,6 @@ jobs:
 
       - name: install, build, and test (unit and e2e)
         run: |
-          npm install
-          npm build --if-present
-          npm test --if-present
+          yarn install
+          yarn run --if-present build
+          yarn run --if-present test
