--- a/package.json
+++ b/package.json
@@ -22,50 +22,51 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.6.1",
-    "@nestjs/axios": "^0.0.7",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/schedule": "^1.1.0",
-    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs-modules/mailer": "1.11.2",
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.3",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/schedule": "^4.0.1",
+    "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.6.7",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.1",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "reflect-metadata": "^0.2.1",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/cron": "^1.7.3",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
+    "@types/jest": "29.5.12",
     "@types/node": "^20.11.26",
     "@types/nodemailer": "^6.4.4",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": ">=6",
-    "jest": "^27.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": ">=15",
-    "prettier": "^2.6.2",
+    "prettier": "^3.2.5",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.9.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.2"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -85,6 +86,10 @@
     "testEnvironment": "node"
   },
   "lint-staged": {
-    "*.{ts,js,md}": "eslint --cache --fix"
+    "*.{ts,js,md}": "eslint --cache --fix",
+    "*.js": "eslint --cache --fix"
+  },
+  "resolutions": {
+    "strip-ansi": "6.0.1"
   }
 }
